# zed

./: Cargo.toml  README.md
app/: Cargo.toml
app/src/: app.rs  controller.rs  lib.rs
zed-client/: Cargo.toml
zed-client/src/: main.rs  util.rs
zed-client/src/zed/: app.rs  client.rs
zed-server/: Cargo.toml
zed-server/src/: main.rs
zed-shared/: Cargo.toml
zed-shared/src/: lib.rs  mapping.rs  message.rs  protocol.rs
