[package]
name = "zed-client"
version = "0.1.0"
authors = ["Marcin Szymczak <marszy@amazon.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bottles = { path = "../../bottles" }
laminar = "0.3.2"
sdl2 = { version = "0.33.0", features = ["unsafe_textures", "image"] }
legion = "0.2.1"
rand = "0.7.3"
crossbeam-channel = "0.3.9"
serde = { version = "1.0", features = ["derive"] }

app = { path = "../app" }
zed-shared = { path = "../zed-shared" }
