[package]
name = "zed-server"
version = "0.1.0"
authors = ["Marcin Szymczak <marszy@amazon.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.3.9"
laminar = "0.3.2"
bincode = "1.2.1"
serde = "1.0.105"
simple-signal = "1.1.1"

zed-shared = { path = "../zed-shared" }
